# realtime-en2ko-captions

./: .env.example  .gitignore  .pre-commit-config.yaml  BCRYPT_MIGRATION.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  IMPROVEMENT_TASKLIST.md  LICENSE  README.md  admin.py  admin_logic.py  app.py  app_new.py  auth.py  aws-alb-setup.md  database.py  deploy-alb.sh  deploy-ec2.sh  docker-compose.yml  local-deploy.sh  login.py  migrate_to_bcrypt.py  prd.md  pyproject.toml  quick-deploy.sh  requirements.txt  services.py  tasklist.md  test_auth.py  test_auth_migration.py  test_token.py  test_transcribe.py  test_websocket.py  translation.py  websocket_handler.py
.github/workflows/: ci.yml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  codebase_structure.md  project_overview.md  suggested_commands.md  task_completion_workflow.md
.streamlit/: config.toml  pages.toml
components/: scroll_lock.html  webrtc.html
data/: app.db
docs/: a11y_audit.md  review_lessons.md  review_notes.md  review_notes_pr10.md
feature/: 1.md
pages/: admin_dashboard.py
tests/: test_admin.py  test_app.py  test_auth_module.py  test_coverage_gaps.py  test_database.py  test_detect_language.py  test_fullscreen.py  test_hmac_cookie.py  test_multilang_translation.py  test_rate_limit.py  test_services.py  test_websocket_auth.py  test_websocket_handler.py
tests/e2e/: conftest.py  test_fullscreen_e2e.py
