[project]
name = "realtime-en2ko-captions"
version = "0.1.0"
description = "Real-time English-to-Korean caption system using OpenAI Realtime API and WebRTC"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=5.0.0",
    "boto3>=1.40.25",
    "botocore>=1.40.25",
    "httpx>=0.28.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "speechrecognition>=3.14.3",
    "streamlit>=1.48.1",
    "streamlit-authenticator>=0.4.2",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pre-commit>=4.3.0",
    "ruff>=0.12.9",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | node_modules
)/
'''

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["realtime_en2ko_captions"]
